HelloUltraviolet/Fixtures/RejectedSource/Patterns/BasicPatternsDiagnostic/Expected.uv
//! Expected diagnostic metadata for the BasicPatternsDiagnostic rejected-source specimen.

expectedDiagnostic("E-SEM-2713", "diag.17.BasicPatterns")
